// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FixContainer should render correctly 1`] = `
<div>
  <div
    class="w-full"
  />
</div>
`;

exports[`FluidContainer should render correctly 1`] = `
<div>
  <div
    class="xl:px-0 mx-auto w-full max-w-screen-xl bg-background-primary-container px-general-lg md:px-general-xl"
  />
</div>
`;
